--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ES2022",
     "module": "ESNext",
-    "declaration": true,
+    "moduleResolution": "Bundler",
     "outDir": "dist",
-    "moduleResolution": "node",
-    "strict": true,
+    "declaration": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "baseUrl": ".",
+    "paths": {
+      "*": ["*", "./*"]
+    },
+    "importsNotUsedAsValues": "remove"
   },
-  "include": [
-    "src",
-    "src/types"
-  ]
+  "include": ["src"]
 }
